--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "start": "bun run src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.4.5"
+    "hono": "^4.4.4"
   },
   "devDependencies": {
     "@types/bun": "latest"
