feat: rewrite fruits and vegatables to plants

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
-# services:
-#   backend:
-#     image: FAV # Remember to change the image name
-#     build:
-#       context: .
-#     ports:
-#       - "3000:3000"
-#     depends_on:
-#       - database
-#   database:
-#     image: postgres:alpine
-#     ports:
-#       - "5432:5432"
-#     environment:
-#       POSTGRES_USER: example_user
-#       POSTGRES_PASSWORD: example_password
-#       POSTGRES_DB: example_database
+services:
+  # backend:
+  #   image: Plants # Remember to change the image name
+  #   build:
+  #     context: .
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - database
+  database:
+    image: postgres:alpine
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: plants_user
+      POSTGRES_PASSWORD: plants_password
+      POSTGRES_DB: plants_database
