feat: install, init, data model, migrate and generate prisma

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# DATABASE_URL="postgress://fav_user:fav_passwordlocalhost:5432/fav_db"
-# POSTGRES_USER="fav_user"
-# POSTGRES_PASSWORD="fav_password"
-# POSTGRES_DB="fav_db"
+# DATABASE_URL="postgresql://plants_user:plants_password@localhost:5432/plants_database"
+
+# POSTGRES_USER="plants_user"
+# POSTGRES_PASSWORD="plants_password"
+# POSTGRES_DB="plants_database"
