Feat: update schema

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-DATABASE_URL="postgresql://plants_user:plants_password@localhost:5432/plants_database"
+# local
+# DATABASE_URL="postgresql://plants_user:plants_password@localhost:5432/plants_database"
+
+# production
+DATABASE_URL="postgresql://neondb_owner:kZ5WzjAgs1al@ep-red-sky-a1xnf1jq.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 
 POSTGRES_USER="plants_user"
 POSTGRES_PASSWORD="plants_password"
